Update the slides

--- a/cours3/index.Rmd
+++ b/cours3/index.Rmd
@@ -504,7 +504,7 @@ L'étape suivante est de transcrire ce modèle conceptuel des données en modèl
 2. Créer la base de données
 3. Créer les tables et spécifier les clés
 4. Ajouter de l'information dans les tables
-5. Faire des requêtes pour extraire l'information 
+5. Faire des requêtes pour extraire l'information
 
 ---
 
@@ -604,7 +604,7 @@ CREATE TABLE films (
 
 - `films` est le nom de la table
 - Chaque attribut de la table (`code`,`titre` etc) dispose d'un type de données (`char(5)`, `varchar(40)` etc)
-- La dernière ligne correspond aux contraintes de la table telle que la clé primaire. Cette contrainte est nommée `pkey_films`
+- La dernière ligne correspond aux contraintes de la table telle que la clé primaire.
 - **Question:** Cette clé primaire est composite ou simple?
 
 ---&twocol
