--- a/cours2/index.Rmd
+++ b/cours2/index.Rmd
@@ -1048,7 +1048,7 @@ dbDisconnect(con)
 
 ---
 
-# Lectures et travail pour la semaine prochiane
+# Lectures et travail pour la semaine prochaine
 
 ## Travail
 
